--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest --verbose"
   },
   "author": "Ben Stone",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
